Fri Aug 11 18:11:40 2000  George Lebl <jirka@5z.com>

	* title-item.[ch]: recompiled with new gob

Fri Aug 11 16:40:41 2000  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, panel_config_global.h, session.c,
	  menu-fentry.[ch]:  add a configuration option that can disable
	  menu merging.

	* menu.c:  Fix a crash on saving state of tornoff menus that point
	  at directories which have been reread

Fri Aug 11 13:58:20 2000  George Lebl <jirka@5z.com>

	* main.c, menu.c, menu-fentry.[ch]: add menu merging ala redhat.
	  (from /etc/X11/applnk/).  This was a very long time in coming to
	  prevent ugly distribution specific patches.

2000-08-10  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/figures/example_menu.png: fixed screenshot

2000-04-24  Martin Baulig  <baulig@suse.de>

	Improved handling of distribution specific menus.

	Rather than providing code for RH and Debian menus, we now
	have some generic "distribution menu" code - all customizing
	is done in a `DistributionInfo' array in distribution.c.

	This makes it very easy for distribution vendors to add a
	custom menu for their distribution (like the already existent
	AnotherLevel and Debian menus) with a about-10-line-change
	in a single source file.

	* distribution.h: New file.
	(DistributionType): Contains all possible Linux distributions.
	(DistributionInfo): New struct type containing info about
	distribution specific menus.

	* distribution.c: New file.
	(get_distribution): New global function; returns the current
	Linux distribution as a `DistributionType'.
	(get_distribution_info): New global global function; takes a
	`DistributionType' argument and returns a `DistributionInfo *',
	this struct contains information about distribution specific
	menus.

	* menu.h (MAIN_MENU_REDHAT): Renamed to `MAIN_MENU_DISTRIBUTION'.
	(MAIN_MENU_REDHAT_SUB): Renamed to `MAIN_MENU_DISTRIBUTION_SUB'.
	(MAIN_MENU_DEBIAN, MAIN_MENU_DEBIAN_SUB): Removed (replaced with