@@ -1,3 +1,8 @@
+Wed Aug 16 00:10:21 2000  George Lebl <jirka@5z.com>
+
+	* panel.c: accept property/bgimage mimetype so that we can get the
+	  bgimage drops from nautilus
+
 Fri Aug 11 18:11:40 2000  George Lebl <jirka@5z.com>
 
 	* title-item.[ch]: recompiled with new gob
